fixing alignment issues

--- a/wp-content/themes/spectrum-parallax-blog/css/nya.css
+++ b/wp-content/themes/spectrum-parallax-blog/css/nya.css
@@ -85,7 +85,7 @@ body { background: #eeefe9 !important; }
 .focus-in-background { background-color: #e6ec5d !important; }
 .supporter-donation, .transformer-donation { display: none; }
 .other-input { display: block !important; }
-#static-background { background: url("/wp-content/themes/nya/images/main.bkg.color.jpg") no-repeat; background-position: 50% 0 !important; background-size: auto auto; height: 960px; position: fixed; width: 100%; z-index: 9998; }
+#static-background { background: url("/wp-content/themes/nya/images/main.bkg.color.jpg") no-repeat; background-position: 50% 17px !important; background-size: auto auto; height: 960px; position: fixed; width: 100%; z-index: 9998; }
 #bg-overlay { background-color: #00b1cc; height: 100%; opacity: 0.8; position: fixed; width: 100%; z-index: 9999; }
 #content { position: absolute; z-index: 9999; }
 #view-your-tile a, #donate-another a { display: none; }
@@ -102,11 +102,11 @@ body { background: #eeefe9 !important; }
 #view-your-tile a { background: url('/wp-content/themes/nya/images/view.tile.btn.png') no-repeat; float: none; height: 58px; margin-right: 4px; text-indent: -9999px; width: 374px;margin:0 auto; }
 #donate-another a { background: url('/wp-content/themes/nya/images/donate.tile.btn.png') no-repeat; float: none; height: 58px; text-indent: -9999px; width: 374px;margin:0 auto; }
 
-#main { margin: 0 auto; top: -12px; width: 100%; }
+#main { margin: 0 auto; top: 0; width: 100%; }
 #block5 .center.blank { width: 1050px; } 
 #donation-container { color: #fff; display: none; height: 500px; margin: 120px auto 0; background: rgba(28,76,89,0.8); width: 875px; }
 #donation-header { background-color: #26343d; height: 128px; text-align: center; }
-#donation-header h1 { color: #fff; display: block; font-family: "Swiss721BT-Black"; font-size: 30px; font-weight: bold; padding: 30px 0 10px 0; text-transform: uppercase; }
+#donation-header h1 { color: #fff; display: block; font-family: "Swiss721BT-Black"; font-size: 30px; font-weight: bold; padding: 30px 20px 10px; text-transform: uppercase; }
 #donation-header h2 { color: #fff; font-family: Arial, verdana, helvetica !important; font-size: 16px; line-height: 20px; margin-left: 10%; text-transform: none; width: 80%; }
 #donation-body { padding-top: 45px; }
 #donation-body .selection { float: left; height: 60px; margin: 0 0 2px 10%; width: 80%; }
